turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:2: error: '<-' expected but ')' found.
  for (i<<0 to 7){
                ^Kerr36:6: error: illegal start of simple expression
}
^